[package]
name = "mos-6502-rusted"
version = "0.1.0"
authors = ["JamesPatrickGill"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
pixels = "0.0.2"
winit = "0.20.0-alpha4"
winit_input_helper = "0.4.0-alpha4"
bit-vec = "0.6.1"
hex = "0.4.0"